--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="./pages/contact.html">Contact</a></li>
                 <li><a href="./pages/blog.html">Blog</a></li>
                 <li><a href="./pages/service.html">Service</a></li>
+                <li><a href="./pages/port.html">Port</a></li>
             </ul>
             <a class="btn bg-warning fs-5 px-3 py-1" href="./pages/info.html">Info</a>
         </div>
