--- a/pages/service.html
+++ b/pages/service.html
@@ -19,6 +19,7 @@
                 <li><a href="./contact.html">Contact</a></li>
                 <li><a href="./blog.html">Blog</a></li>
                 <li><a href="./service.html">Service</a></li>
+                <li><a href="./port.html">Port</a></li>
             </ul>
             <a class="btn bg-warning fs-5 px-3 py-1" href="./info.html">Info</a>
         </div>
