--- a/pages/port.html
+++ b/pages/port.html
@@ -102,6 +102,7 @@
           <div class="spinner-border text-success mb-4"></div>
           <div class="spinner-border text-warning mb-4"></div>
           <div class="spinner-border text-info mb-4"></div>
+          <div class="spinner-border text-danger mb-4"></div>
         </div>
       </div>
     </section>
