--- a/pages/port.html
+++ b/pages/port.html
@@ -97,6 +97,81 @@
           <button class="btn btn-success">Good bye</button>
         </div>
       </div>
+      <div class="container py-4 d-flex justify-content-between">
+        <div class="card" style="width: 48%;">
+          <img src="https://images.pexels.com/photos/31090535/pexels-photo-31090535/free-photo-of-rustic-western-style-wooden-saloon-front.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="card-img-top">
+          <div class="card-body">
+            <h5 class="card-title">Lorem, ipsum.</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sit veritatis tenetur voluptatem ratione blanditiis, excepturi similique explicabo!</p>
+            <button class="btn btn-close"></button>
+          </div>
+        </div>
+        <div class="card" style="width: 48%;">
+          <div class="card-header">Card Header</div>
+          <div class="card-body">
+            <h5 class="card-title">Lorem, ipsum.</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sit veritatis tenetur voluptatem ratione blanditiis, excepturi similique explicabo!</p>
+          </div>
+          <img src="https://images.pexels.com/photos/31090535/pexels-photo-31090535/free-photo-of-rustic-western-style-wooden-saloon-front.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="card-img-bottom">
+        </div>
+      </div>
+      <div class="container d-flex py-4 justify-content-between flex-wrap gap-md-4">  
+        <div class="card" style="width:60%;">
+          <div class="row g-0">
+            <div class="col-4">
+               <div class="w-100 h-100" style="background-size: cover; background-image: url(https://images.pexels.com/photos/31090535/pexels-photo-31090535/free-photo-of-rustic-western-style-wooden-saloon-front.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);"></div>
+            </div>
+            <div class="col-8">
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text"><span class="text-muted fs-6">Last updated 3 mins ago</span></p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card" style="width: 48%;">
+          <div class="card-header">Card Header</div>
+          <div class="card-body">
+            <h5 class="card-title">Lorem, ipsum.</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sit veritatis tenetur voluptatem ratione blanditiis, excepturi similique explicabo!</p>
+          </div> 
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Item 1</li>
+            <li class="list-group-item">Item 2</li>
+          </ul>
+          <div class="card-footer">card footer</div>       
+        </div>
+        <div class="card text-light" style="width: 48%;">
+          <img src="https://images.pexels.com/photos/31090535/pexels-photo-31090535/free-photo-of-rustic-western-style-wooden-saloon-front.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="card-img">
+          <div class="card-img-overlay text-center" style="background-color: rgba(0, 0, 0, 0.36)">
+            <h5 class="card-title">Lorem, ipsum.</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sit veritatis tenetur voluptatem ratione blanditiis, excepturi similique explicabo!</p>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <h4>Carousel</h4>
+        <div id="carousel" class="carousel slide overflow-hidden" data-bs-ride="carousel" style="height: 600px;">
+          <div class="carousel-inner">
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/460775/pexels-photo-460775.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item active">
+              <img src="https://images.pexels.com/photos/225203/pexels-photo-225203.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100" alt="...">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+      </div>
       <div class="container pb-4">
         <div>
           <div class="spinner-border text-success mb-4"></div>
