--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <nav class="navbar bg-success">
         <div class="container">
             <h4 class="navbar-brand fs-1 fst-italic text-danger">Logo</h4>
-            <ul class="navbar-nav flex-row gap-3">
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./pages/about.html">About</a></li>
-                <li><a href="./pages/contact.html">Contact</a></li>
-                <li><a href="./pages/blog.html">Blog</a></li>
-                <li><a href="./pages/service.html">Service</a></li>
-                <li><a href="./pages/port.html">Port</a></li>
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a class="nav-link active" href="./index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/blog.html">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/service.html">Service</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/port.html">Port</a></li>
+                <li class="nav-item"><a class="nav-link" href="pages/last.html">Last</a></li>
             </ul>
             <a class="btn bg-warning fs-5 px-3 py-1" href="./pages/info.html">Info</a>
         </div>
