--- a/pages/blog.html
+++ b/pages/blog.html
@@ -13,18 +13,19 @@
     <nav class="navbar bg-success">
         <div class="container">
             <h4 class="navbar-brand fs-1 fst-italic text-danger">Logo</h4>
-            <ul class="navbar-nav flex-row gap-3">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./service.html">Service</a></li>
-                <li><a href="./port.html">Port</a></li>
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link active" href="./blog.html">Blog</a></li>
+                <li class="nav-item"><a class="nav-link" href="./service.html">Service</a></li>
+                <li class="nav-item"><a class="nav-link" href="./port.html">Port</a></li>
+                <li class="nav-item"><a class="nav-link" href="./last.html">Last</a></li>
             </ul>
             <a class="btn bg-warning fs-5 px-3 py-1" href="./info.html">Info</a>
         </div>
     </nav>
-    <section>
+    <section id="overflow">
         <div class="container py-2">
             <div class="w-100 d-flex flex-column gap-4">
                 <div class="w-25 bg-danger align-self-center p-2 overflow-auto" style="height: 250px;">
