--- a/pages/port.html
+++ b/pages/port.html
@@ -13,14 +13,15 @@
     <nav class="navbar bg-success">
         <div class="container">
             <h4 class="navbar-brand fs-1 fst-italic text-danger">Logo</h4>
-            <ul class="navbar-nav flex-row gap-3">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./service.html">Service</a></li>
-                <li><a href="./port.html">Port</a></li>
-            </ul>
+            <ul class="nav nav-pills">
+              <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
+              <li class="nav-item"><a class="nav-link" href="./blog.html">Blog</a></li>
+              <li class="nav-item"><a class="nav-link" href="./service.html">Service</a></li>
+              <li class="nav-item"><a class="nav-link active" href="./port.html">Port</a></li>
+              <li class="nav-item"><a class="nav-link" href="./last.html">Last</a></li>
+          </ul>
             <a class="btn bg-warning fs-5 px-3 py-1" href="./info.html">Info</a>
         </div>
     </nav>
@@ -152,26 +153,130 @@
       </div>
       <div class="container">
         <h4>Carousel</h4>
-        <div id="carousel" class="carousel slide overflow-hidden" data-bs-ride="carousel" style="height: 600px;">
+        <div class="carousel slide mb-4" id="carousel1">
           <div class="carousel-inner">
-            <div class="carousel-item">
-              <img src="https://images.pexels.com/photos/460775/pexels-photo-460775.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100" alt="...">
-            </div>
             <div class="carousel-item active">
-              <img src="https://images.pexels.com/photos/225203/pexels-photo-225203.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100" alt="...">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100" alt="...">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="d-block w-100">
             </div>
           </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+        </div>
+        <div class="carousel slide mb-4" id="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="d-block w-100">
+            </div>
+          </div>
+          <button class="carousel-control-next" data-bs-target="#carousel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+          <button class="carousel-control-prev" data-bs-target="#carousel" data-bs-slide="prev">
             <span class="carousel-control-prev-icon"></span>
           </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+        </div>
+        <div class="carousel slide mb-4" id="carousel2">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="" class="d-block w-100">
+            </div>
+          </div>
+          <button class="carousel-control-next" data-bs-target="#carousel2" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+          <button class="carousel-control-prev" data-bs-target="#carousel2" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+        </div>
+        <!-- here is a bug that I have to fix -->
+        <div class="carousel slide mb-4" id="carousel3" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="i">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="i">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="i">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="i">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="i">
+            </div>
+          </div>
+          <button class="carousel-control-next" type="button" data-bs-target="#carousel3" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carousel3" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+        </div>
+
+        <div id="carousel4" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carousel4" data-bs-slide-to="0" class="active" aria-current="true"></button>
+            <button type="button" data-bs-target="#carousel4" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#carousel4" data-bs-slide-to="2"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="i">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="i">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="i">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carousel4" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carousel4" data-bs-slide="next">
             <span class="carousel-control-next-icon"></span>
           </button>
         </div>
+
+        <div class="carousel slide" id="carousel5" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button class="active" type="button"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="i">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="i">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="i">
+            </div>
+            <div class="carousel-item">
+              <img src="https://images.pexels.com/photos/1574181/pexels-photo-1574181.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="i">
+            </div>
+          </div>
+        </div>
       </div>
+
       <div class="container pb-4">
         <div>
           <div class="spinner-border text-success mb-4"></div>
