--- a/pages/service.html
+++ b/pages/service.html
@@ -13,13 +13,14 @@
     <nav class="navbar bg-success">
         <div class="container">
             <h4 class="navbar-brand fs-1 fst-italic text-danger">Logo</h4>
-            <ul class="navbar-nav flex-row gap-3">
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="./about.html">About</a></li>
-                <li><a href="./contact.html">Contact</a></li>
-                <li><a href="./blog.html">Blog</a></li>
-                <li><a href="./service.html">Service</a></li>
-                <li><a href="./port.html">Port</a></li>
+            <ul class="nav nav-pills">
+                <li class="nav-item"><a class="nav-link" href="../index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="./about.html">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="./contact.html">Contact</a></li>
+                <li class="nav-item"><a class="nav-link" href="./blog.html">Blog</a></li>
+                <li class="nav-item"><a class="nav-link active" href="./service.html">Service</a></li>
+                <li class="nav-item"><a class="nav-link" href="./port.html">Port</a></li>
+                <li class="nav-item"><a class="nav-link" href="./last.html">Last</a></li>
             </ul>
             <a class="btn bg-warning fs-5 px-3 py-1" href="./info.html">Info</a>
         </div>
